working on the dataset input

--- a/EMNIST/Classification/Exploration.ipynb
+++ b/EMNIST/Classification/Exploration.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/computation/__init__.py:18: UserWarning: The installed version of numexpr 2.4.3 is not supported in pandas and will be not be used\n",
+      "The minimum supported version is 2.4.6\n",
+      "\n",
+      "  ver=ver, min_ver=_MIN_NUMEXPR_VERSION), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from scipy import io as spio\n",
@@ -16,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train = x_train.reshape(x_train.shape[0], 1, 28, 28, order=\"A\")\n",
-    "x_test = x_test.reshape(x_test.shape[0], 1, 28, 28, order=\"A\")"
+    "x_test = x_test.reshape(x_test.shape[0], 1, 28, 28, order=\"A\")\n",
+    "\n",
+    "#x_train = x_train.reshape(x_train.shape[0], 1, 28, 28, order=\"A\")\n",
+    "#x_test = x_test.reshape(x_test.shape[0], 1, 28, 28, order=\"A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -82,10 +96,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f4e45bd1a90>"
+       "<matplotlib.image.AxesImage at 0x7f16b89443d0>"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,7 +107,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEH9JREFUeJzt3W2MVGWaxvHr5mVUUAQUCEEXhOga\nQdZZO2p8IWxcJ0hGVD6ABoVNzLQf1OzoGFT8sPjyYdzsjFGJJgyaQTMrrkHUmMmiixLUECMvrtC6\ng4qNA2lgDAMjimg3937ow6RHOfdp6+1U9/P/JaS766pT9VD0xamqp855zN0FID0Dyh4AgHJQfiBR\nlB9IFOUHEkX5gURRfiBRlB9IFOUHEkX5gUQNauSdmRkfJwTqzN2tN9eras9vZjPM7A9m9rGZ3V3N\nbQFoLKv0s/1mNlDSNklXSNop6V1J17v7B8E27PmBOmvEnv8CSR+7+3Z3/0bSCklXV3F7ABqomvKP\nk/THHj/vzC77G2bWamYbzGxDFfcFoMbq/oafuy+VtFTiaT/QTKrZ8++SdHqPn0/LLgPQB1RT/ncl\nnWlmZ5jZjyRdJ+nl2gwLQL1V/LTf3TvN7FZJqyUNlPSUu7fVbGTo9wYNqu+rzs7Ozrrefl9X8VRf\nRXfGa370QPnroyEf8gHQd1F+IFGUH0gU5QcSRfmBRFF+IFENPZ4f/c9VV10V5tOmTcvNpk+fHm47\nbNiwMD9w4ECYz5kzJzdrb28Pt00Be34gUZQfSBTlBxJF+YFEUX4gUZQfSBRH9SXu+OOPD/PTTjst\nzJ9//vkwnzx5cm5W7VF9Rb+7d955Z2722GOPhdv25SMCOaoPQIjyA4mi/ECiKD+QKMoPJIryA4mi\n/ECiOKS3nyuax1+4cGGYz5o1K8zPOeecMI/m8s16NR1dsaJDglPHnh9IFOUHEkX5gURRfiBRlB9I\nFOUHEkX5gURVNc9vZu2SvpDUJanT3VtqMSj8MKNHj87NHnrooXDb+fPnh3nRXHw95+qLjtc/fPhw\nmG/atCk3O3LkSEVj6k9q8SGff3L3z2twOwAaiKf9QKKqLb9LetXMNppZay0GBKAxqn3af6m77zKz\n0ZJeM7P/c/d1Pa+Q/afAfwxAk6lqz+/uu7KveyWtknTBMa6z1N1beDMQaC4Vl9/MhprZSUe/l/QT\nSVtrNTAA9VXN0/4xklZlUz2DJP2nu/93TUYFoO4qLr+7b5f0DzUcC3IUnd8+Wgb7yiuvDLetdp6+\n6Pz20e0PGFDd+80dHR1h/vrrr+dmzPMz1Qcki/IDiaL8QKIoP5Aoyg8kivIDieLU3U1g4MCBYX7X\nXXeF+W233ZabRYf7SlJXV1eYr127NszvueeeMJ8yZUpudu+994bbTpo0KcyHDh1acf7ll1+G26aA\nPT+QKMoPJIryA4mi/ECiKD+QKMoPJIryA4linr8Biubxp0+fHuY33XRTmEdz+UWnv96yZUuYL1my\nJMw3btwY5m1tbWEeWbZsWZiPHDkyzKNDnV988cVw26JDlfsD9vxAoig/kCjKDySK8gOJovxAoig/\nkCjKDyTKiuaBa3pnZo27syYyb968ML///vvD/IwzzgjzQ4cO5WYvvPBCuO3NN98c5l999VWYV2PC\nhAlh/uqrr4b5+PHjw/zAgQO5WdE8/6JFi8L888+bd2Fqd+/V+djZ8wOJovxAoig/kCjKDySK8gOJ\novxAoig/kKjCeX4ze0rSTyXtdfcp2WUjJT0naYKkdklz3P3PhXfWT+f5hwwZEuZvv/12mE+dOjXM\nDx8+HOYrV67MzRYvXhxu+8knn4R5PQ0ePDjML7nkkjB/5JFHwvzcc8/NzbZt2xZuO2vWrDAv2r5M\ntZzn/62kGd+57G5Ja9z9TElrsp8B9CGF5Xf3dZL2fefiqyUtz75fLumaGo8LQJ1V+pp/jLt3ZN/v\nljSmRuMB0CBVn8PP3T16LW9mrZJaq70fALVV6Z5/j5mNlaTs6968K7r7UndvcfeWCu8LQB1UWv6X\nJS3Ivl8g6aXaDAdAoxSW38yelbRe0t+b2U4zu0nSLyVdYWYfSfrn7GcAfUjha353vz4nurzGY2lq\nxx13XG527bXXhtueffbZYW4WT8uuXr06zO+7777cbPv27eG2Zfr222/D/J133gnzouP9o3n+ESNG\nhNtOnjw5zJt5nr+3+IQfkCjKDySK8gOJovxAoig/kCjKDySKU3dniqbbzj///NxsxYoV4bYTJ04M\n808//TTML788nlVtb28P83oaMCDef0SPa1dXV1X3Hf2bSNL69etzs6Lf+wcffDDMH3jggTAvE6fu\nBhCi/ECiKD+QKMoPJIryA4mi/ECiKD+QqKpP49VfnHLKKWF+yy235Gbjxo0Lt+3s7AzzomW0d+zY\nEeZlmjlzZphPmjQpN3vppfgcMEWfXzh48GCYR/bv3x/mW7durfi2+wr2/ECiKD+QKMoPJIryA4mi\n/ECiKD+QKMoPJIp5/sxll10W5tF8dnRab6l4vrrofACNPOfCdxWdi2DZsmVhPmrUqNws+uyEVHwe\ng+uuuy7MBw4cmJt99tln4babN28O8/6APT+QKMoPJIryA4mi/ECiKD+QKMoPJIryA4kqnOc3s6ck\n/VTSXnefkl22WNLPJP0pu9oid/99vQbZCFOmTAnz4cOHV3zbRUtRHzhwoOLbrtaQIUPC/MYbbwzz\naB5fis/bP378+HDbCy+8MMxnz54d5l9//XVu9sorr4Tb7t69O8z7g97s+X8racYxLn/Y3c/L/vTp\n4gMpKiy/u6+TtK8BYwHQQNW85r/VzN43s6fMbETNRgSgISot/xOSJkk6T1KHpF/lXdHMWs1sg5lt\nqPC+ANRBReV39z3u3uXuRyT9RtIFwXWXunuLu7dUOkgAtVdR+c1sbI8fr5XU/091CvQzvZnqe1bS\ndEmnmtlOSf8mabqZnSfJJbVLurmOYwRQB4Xld/frj3Hxk3UYS6mKzgEfnXt/8ODB4bZF+cknnxzm\n1RgwIH5yt2TJkjCfO3dumEfz+EWKHpeicwWcdNJJYb5q1arc7Iknngi3jT4j0F/wCT8gUZQfSBTl\nBxJF+YFEUX4gUZQfSBSn7s6sWbMmzBcsWJCbTZ06Ndx2zJgxYT59+vQw37hxY5hHiqb6Lrrooopv\nW5L27YuP+Ro5cmTFtz1s2LAwLzql+fr163OzonGngD0/kCjKDySK8gOJovxAoig/kCjKDySK8gOJ\nYp4/s23btjCPDg8966yzwm2LlvCeNm1amD/++ONhfujQoTCPtLW1hflzzz0X5qNHjw7z1tbW3GzQ\noPjXr2gev2jp85UrV+Zm0SHaqWDPDySK8gOJovxAoig/kCjKDySK8gOJovxAoqxoLrWmd2bWuDur\nsYkTJ+ZmK1asCLdtaYkXKyr6NyhaTnrdunW52dq1a8Nto7+XJE2ePDnM58+fH+YTJkzIzYpO+100\nF1902vE77rgjN2vk732juXuvzqfOnh9IFOUHEkX5gURRfiBRlB9IFOUHEkX5gUQVzvOb2emSnpY0\nRpJLWuruj5jZSEnPSZogqV3SHHf/c8Ft9dnJ1eiY/NmzZ4fbFi01fcIJJ4T5kSNHwvzw4cO52Z49\ne8Jthw4dGubDhw8P86Jltutp+/btYX7xxRfnZnv37q31cJpGLef5OyX9wt3PkXSRpFvM7BxJd0ta\n4+5nSlqT/Qygjygsv7t3uPum7PsvJH0oaZykqyUtz662XNI19RokgNr7Qa/5zWyCpB9LekfSGHfv\nyKLd6n5ZAKCP6PU5/MzsREkrJf3c3f/S83PZ7u55r+fNrFVS/oncAJSiV3t+Mxus7uL/zt1fyC7e\nY2Zjs3yspGO+g+LuS929xd3jo1sANFRh+a17F/+kpA/d/dc9opclHV26doGkl2o/PAD10pupvksl\nvSlpi6Sjc06L1P26/78k/Z2kHeqe6gvXPe7LU32RokNTZ82aFeY33HBDmM+cOTPMq5luK/r3379/\nf5i/+eabYd7R0ZGbzZ07N9z21FNPDfMiCxcuzM0effTRcNtvvvmmqvsuU2+n+gpf87v7W5Lybuzy\nHzIoAM2DT/gBiaL8QKIoP5Aoyg8kivIDiaL8QKJYorsGqj319vr168N83rx5YT5s2LAwjxQdLrx1\n69Ywf+utt8I8Wob7xBNPDLddsGBBmBeZMWNGbrZ58+Zw2zfeeCPMix63voA9P5Aoyg8kivIDiaL8\nQKIoP5Aoyg8kivIDiWKJbpRm9OjRYb5ly5YwHzVqVJh3dXXlZs8880y4bbS8t1R8noMysUQ3gBDl\nBxJF+YFEUX4gUZQfSBTlBxJF+YFEcTw/SrNvX7jMg3bs2BHmRef1j86939bWFm578ODBMO8P2PMD\niaL8QKIoP5Aoyg8kivIDiaL8QKIoP5Cownl+Mztd0tOSxkhySUvd/REzWyzpZ5L+lF11kbv/vl4D\nRf/T2dkZ5g8//HCY33777WEezdWvXr063LZobP1Bbz7k0ynpF+6+ycxOkrTRzF7Lsofd/T/qNzwA\n9VJYfnfvkNSRff+FmX0oaVy9Bwagvn7Qa34zmyDpx5LeyS661czeN7OnzGxEzjatZrbBzDZUNVIA\nNdXr8pvZiZJWSvq5u/9F0hOSJkk6T93PDH51rO3cfam7t7h7Sw3GC6BGelV+Mxus7uL/zt1fkCR3\n3+PuXe5+RNJvJF1Qv2ECqLXC8puZSXpS0ofu/usel4/tcbVrJcXLuQJoKoWn7jazSyW9KWmLpKPr\nEi+SdL26n/K7pHZJN2dvDka3xam7UTPR8t9SvHR6dFrvvq63p+7mvP3osyj/sXHefgAhyg8kivID\niaL8QKIoP5Aoyg8kiqk+oJ9hqg9AiPIDiaL8QKIoP5Aoyg8kivIDiaL8QKIavUT355J6rrt8anZZ\nM2rWsTXruCTGVqlajm18b6/Y0A/5fO/OzTY067n9mnVszTouibFVqqyx8bQfSBTlBxJVdvmXlnz/\nkWYdW7OOS2JslSplbKW+5gdQnrL3/ABKUkr5zWyGmf3BzD42s7vLGEMeM2s3sy1m9l7ZS4xly6Dt\nNbOtPS4baWavmdlH2ddjLpNW0tgWm9mu7LF7z8xmljS2083sDTP7wMzazOxfs8tLfeyCcZXyuDX8\nab+ZDZS0TdIVknZKelfS9e7+QUMHksPM2iW1uHvpc8JmNk3SQUlPu/uU7LJ/l7TP3X+Z/cc5wt3v\napKxLZZ0sOyVm7MFZcb2XFla0jWS/kUlPnbBuOaohMetjD3/BZI+dvft7v6NpBWSri5hHE3P3ddJ\n2vedi6+WtDz7frm6f3kaLmdsTcHdO9x9U/b9F5KOrixd6mMXjKsUZZR/nKQ/9vh5p5pryW+X9KqZ\nbTSz1rIHcwxjeqyMtFvSmDIHcwyFKzc30ndWlm6ax66SFa9rjTf8vu9Sd/9HSVdKuiV7etuUvPs1\nWzNN1/Rq5eZGOcbK0n9V5mNX6YrXtVZG+XdJOr3Hz6dllzUFd9+Vfd0raZWab/XhPUcXSc2+7i15\nPH/VTCs3H2tlaTXBY9dMK16XUf53JZ1pZmeY2Y8kXSfp5RLG8T1mNjR7I0ZmNlTST9R8qw+/LGlB\n9v0CSS+VOJa/0SwrN+etLK2SH7umW/Ha3Rv+R9JMdb/j/4mke8sYQ864Jkr63+xPW9ljk/Ssup8G\nfqvu90ZuknSKpDWSPpL0P5JGNtHYnlH3as7vq7toY0sa26Xqfkr/vqT3sj8zy37sgnGV8rjxCT8g\nUbzhBySK8gOJovxAoig/kCjKDySK8gOJovxAoig/kKj/B6UkZjqnnYvLAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4e462fdf90>"
+       "<matplotlib.figure.Figure at 0x7f16b89e30d0>"
       ]
      },
      "metadata": {},
